# ryva

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ryva.yml
docs/: healthcare-readiness-gap-memo.md
healthcare-ai-audit-demo/: .ryva_secret  README.md  policies.yml  project.yml
healthcare-ai-audit-demo/agents/: patient_intake_triage_agent.yml
healthcare-ai-audit-demo/audit_assets/: approval_history.md  change_history.md  system_overview.md  technical_documentation.md
healthcare-ai-audit-demo/cloud_fixtures/: approvals.json  audit_package_manifest.json  change_history.json  compliance_report.json  governance_report.json  systems.json  traces.json
my-first-project/: .gitignore  README.md  model_registry.json  project.yml
my-first-project/macros/: formatting.j2
ryva/: adversarial_tester.py  alignment.py  audit_export.py  backends.py  benchmarker.py  cli.py  cloud_sync.py  comparer.py  compat_tester.py  compiler.py  cost_tracker.py  dag.py  demo_tools.py  docs.py  edge.py  embeddings.py  evaluator.py  feedback.py  finetune_tester.py  fuzzer.py  governance.py  hallucination_detector.py  ingest.py  init_project.py  lineage.py  logger.py  memory_tester.py  ml_tester.py  model_card.py  multimodal_tester.py  pii_masker.py  pipeline_runner.py  pipeline_tester.py  plugins.py  pricing.yml  providers.py  rag_tester.py  registry.py  regression_tester.py  release_gates.py  (+9 more)
scripts/: pilot_playbook.sh
templates/: ryva-ci.yml
tests/: conftest.py  test_alignment.py  test_approvals.py  test_audit_export.py  test_backends.py  test_change_history.py  test_cli_run_flags.py  test_compiler.py  test_cost_tracker.py  test_demo_tools.py  test_edge.py  test_embeddings.py  test_feedback.py  test_governance.py  test_ingest.py  test_lineage.py  test_model_card.py  test_pii_masker.py  test_project_manifest_config.py  test_providers.py  test_release_gates.py  test_resolver.py  test_retrainer.py  test_runner.py  test_schemas.py  test_tester.py  test_utils.py  test_vision_lineage.py
(+152 files in other folders)
