[project]
name = "ryva"
version = "0.2.1"
description = "The engineering framework for agentic AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Allie Ball", email = "you@example.com" }]
dependencies = [
    "typer>=0.12.0",
    "ruamel.yaml>=0.18.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "markdown>=3.10.2",
    "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
]
s3 = [
    "boto3>=1.34.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
ryva = "ryva.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
